// AppConstants.swift
// Copyright © RoadMap. All rights reserved.

import Foundation

/// Строковые данные для всего приложения
struct AppConstants {
    static let cinemaIdentifier = "CinemaIdentifier"
    static let title = "Смотри исторические фильмы на "
    static let cinemaTitle = "CINEMA STAR"
    static let inter = "Inter"
    static let interBold = "Inter-Bold"

    static let infoIdentifier = "InfoIdentifier"
    static let descriptionIdentifier = "DescriptionIdentifier"
    static let actorIdentifier = "ActorIdentifier"
    static let recomendationIdentifier = "CiIdentifier"
    static let actorCollectionIdentifier = "ActorsCollectionViewCell"
    static let see = "Смотреть"
    static let actorText = "Актеры и съемочная группа"
    static let languge = "Язык"
    static let notLanguage = "Язык не установлен"
    static let lookText = "Смотрите также"
    static let reccommenationCollectionIdentifier = "RecommendationCollectionViewCell"
    static let buttonName = "more"
    static let upButtonName = "up"
    static let backButtonName = "back"
    static let favoritesButtonName = "favorites"
    static let fullFavoritesButtonName = "fullFavorites"
    static let fileName = "token.txt"
    static let forKeyName = "token"
    static let headerName = "X-API-KEY"
}
