...
            guard let self = self else { return }
            showAlert()
        }
    }

    private func showAlert() {
        let alert = UIAlertController(title: "Упс!", message: "Функционал в разработке :(", preferredStyle: .alert)
        alert.addAction(UIAlertAction(title: "OK", style: .cancel))
        present(alert, animated: true)
    }

    private func updateColorButton() {
        detailsViewModel?.favoritesHandler = { [weak self] state in
            guard let self = self else { return }
...
